--- a/IpInformationProvider/UnitTests/UnitTests.csproj
+++ b/IpInformationProvider/UnitTests/UnitTests.csproj
@@ -6,12 +6,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\IIpInformationProvider\IIpInformationProvider.csproj" />
+    <ProjectReference Include="..\IpWebApi\IpWebApi.csproj" />
   </ItemGroup>
 
 </Project>
